--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,7 +31,8 @@
                 app:srcCompat="@drawable/placeholder_picture_of_day"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/this_is_nasa_s_picture_of_day_showing_nothing_yet"/>
 
             <TextView
                 android:id="@+id/textView"
